do add/del btns

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-
+  <button class="add-watched-movie">Add to watched</button>
+  <button class="add-queue-movie">Add to queue</button>
 </body>
 
 </html>
