--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,15 @@
 
 <body>
 
+  /* LOADER */
+<div class="loader">
+  <div class="dash uno"></div>
+  <div class="dash dos"></div>
+  <div class="dash tres"></div>
+  <div class="dash cuatro"></div>
+</div>
+
+
 </body>
 
 </html>
