--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Filmoteka</title>
+  <link rel="stylesheet" href="./css/styles.css">
 
 
 </head>
 
 <body>
-
+  <header>
+    <div class="conteiner header">
+      <img src="./img/film.svg" alt="" class="header__logo">
+      <p class="header__label">Filmoteka</p>
+      <div class="header__search">
+        <input placeholder="Поиск фильмов" class="header__input">
+        <img src="./img/search.svg" alt="">
+      </div>
+      <ul class="header__navigation">
+        <li class="nav__item"><a href="index.html" class="nav__link active">Home</a></li>
+        <li class="nav__item"><a href="library.html" class="nav__link">MY LIBRARY</a></li>
+      </ul>
+    </div>
+  </header>
+  <main class="container">
+  </main>
+  <footer>
+    <div class="conteiner footer">
+      <p>© 2020 | All Rights Reserved |</p>
+      <div class="footer__div">
+        <p class="footer__p"> Developed with</p>
+        <img src="./img/Vector.svg" alt="" class="footer__img">
+        <a href="">by GoIT Students</a>
+      </div>
+    </div>
+  </footer>
+  </body>
 </body>
 
 </html>
+
