--- a/src/library.html
+++ b/src/library.html
@@ -10,25 +10,25 @@
 </head>
 
 <body>
-  
+
   <header>
     <div class="conteiner header">
-      <img src="./img/film.svg" alt="" class="header__logo">
+      <a href="./index.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
       <p class="header__label">Filmoteka</p>
       <div class="header__button">
         <button type="button" class="button__wetched">Wetched</button>
         <button type="button" class="button__queue">Queue</button>
       </div>
       <ul class="header__navigation">
-        <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-        <li class="nav__item"><a href="library.html" class="nav__link active">MY LIBRARY</a></li>
+        <li class="nav__item"><a href="./index.html" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="./library.html" class="nav__link active">MY LIBRARY</a></li>
       </ul>
     </div>
   </header>
-  
+
   <main class="container">
   </main>
-  
+
   <footer>
     <div class="conteiner footer">
       <p>© 2020 | All Rights Reserved |</p>
