change path in logo

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="conteiner header">
-      <a href="./library.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
+      <a href="./index.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
       <p class="header__label">Filmoteka</p>
       <div class="header__search">
         <input placeholder="Поиск фильмов" class="header__input">
