--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
   </footer>
 
   <!-- LOADER -->
-  <div class="loader">
+  <div class="loader is-hidden">
     <div class="dash uno"></div>
     <div class="dash dos"></div>
     <div class="dash tres"></div>
