--- a/src/library.html
+++ b/src/library.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>My library</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>My library</title>
+  <body>
+    <header>
+      <div class="conteiner header">
+        <a href="./index.html"
+          ><img src="./img/film.svg" alt="film tape" class="header__logo"
+        /></a>
+        <p class="header__label">Filmoteka</p>
+        <div class="header__button">
+          <!-- почистить здесь -->
+          <button class="add-watched-movie">Add to watched</button>
+          <button class="add-queue-movie">Add to queue</button>
+          <style>
+            .delete-movie {
+              background-color: orange;
+            }
+          </style>
+          <!-- <button type="button" class="button__wetched">Wetched</button>
+        <button type="button" class="button__queue">Queue</button> -->
+          <button class="btn-watch">Watch</button>
+          <button class="btn-queue">Queue</button>
+        </div>
 
-</head>
-
-<body>
-
-  <header>
-    <div class="conteiner header">
-      <a href="./index.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
-      <p class="header__label">Filmoteka</p>
-      <div class="header__button">
-        <button type="button" class="button__wetched">Wetched</button>
-        <button type="button" class="button__queue">Queue</button>
+        <ul class="header__navigation">
+          <li class="nav__item">
+            <a href="./index.html" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="./library.html" class="nav__link active">MY LIBRARY</a>
+          </li>
+        </ul>
       </div>
-      <ul class="header__navigation">
-        <li class="nav__item"><a href="./index.html" class="nav__link">Home</a></li>
-        <li class="nav__item"><a href="./library.html" class="nav__link active">MY LIBRARY</a></li>
-      </ul>
-    </div>
-  </header>
+    </header>
 
-  <main class="container">
-  </main>
+    <main class="container"></main>
 
-  <footer>
-    <div class="conteiner footer">
-      <p>© 2020 | All Rights Reserved |</p>
-      <div class="footer__div">
-        <p class="footer__p"> Developed with</p>
-        <img src="./img/Vector.svg" alt="" class="footer__img">
-        <a href="" class="footer__link">by GoIT Students</a>
+    <footer>
+      <div class="conteiner footer">
+        <p>© 2020 | All Rights Reserved |</p>
+        <div class="footer__div">
+          <p class="footer__p">Developed with</p>
+          <img src="./img/Vector.svg" alt="" class="footer__img" />
+          <a href="" class="footer__link">by GoIT Students</a>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
