--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
+  <a href="./library.html">Library</a>
+        <button type="button" class="show-modal">Show modal</button>
 
-</body>
-
+  
+  </body>
 </html>
