--- a/src/library.html
+++ b/src/library.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+  <a href="./index.html">Index</a>
+        <button type="button" class="show-modal">Show modal</button>
+
+<!-- modal -->
+<div class="lightbox js-lightbox">
+  <div class="lightbox_overlay">
+    <div class="lightbox_content"></div>
+  </div>
+      <button type="button" class="lightbox_button" data-action="close-lightbox"></button>
+
+</div>
 
 </body>
 
