fix index.html and index.js

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,9 @@
 
 <body>
   <a href="./library.html">Library</a>
-        <button type="button" class="show-modal">Show modal</button>
+  <button type="button" class="show-modal">Show modal</button>
 
-  
-  </body>
+
   <header>
     <div class="conteiner header">
       <a href="./index.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
@@ -30,7 +29,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container main-js">
   </main>
 
   <footer>
