add logic for library tabs watched and queue

--- a/src/library.html
+++ b/src/library.html
@@ -15,18 +15,8 @@
         /></a>
         <p class="header__label">Filmoteka</p>
         <div class="header__button">
-          <!-- почистить здесь -->
-          <button class="add-watched-movie">Add to watched</button>
-          <button class="add-queue-movie">Add to queue</button>
-          <style>
-            .delete-movie {
-              background-color: orange;
-            }
-          </style>
-          <!-- <button type="button" class="button__wetched">Wetched</button>
-        <button type="button" class="button__queue">Queue</button> -->
-          <button class="btn-watch">Watch</button>
-          <button class="btn-queue">Queue</button>
+          <button type="button" class="button__wetched">Wetched</button>
+          <button type="button" class="button__queue">Queue</button>
         </div>
 
         <ul class="header__navigation">
