--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
     <div class="conteiner header">
       <a href="./index.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
       <p class="header__label">Filmoteka</p>
-      <div class="header__search">
-        <input placeholder="Поиск фильмов" class="header__input">
+      <form class="header__search form-js">
+        <input placeholder="Поиск фильмов" class="header__input input-js">
         <img src="./img/search.svg" alt="">
-      </div>
+      </form>
       <ul class="header__navigation">
         <li class="nav__item"><a href="./index.html" class="nav__link active">Home</a></li>
         <li class="nav__item"><a href="./library.html" class="nav__link">MY LIBRARY</a></li>
