--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,8 @@
 </head>
 
 <body>
-  <a href="./library.html">Library</a>
-        <button type="button" class="show-modal">Show modal</button>
 
-  
-  </body>
-  <header>
+    <header>
     <div class="conteiner header">
       <a href="./index.html"><img src="./img/film.svg" alt="film tape" class="header__logo"></a>
       <p class="header__label">Filmoteka</p>
@@ -30,7 +26,19 @@
     </div>
   </header>
 
-  <main class="container">
+  <!-- modal -->
+  <div class="lightbox js-lightbox">
+    <div class="lightbox_overlay">
+      <div class="lightbox_content"></div>
+      <button type="button" class="lightbox_button" data-action="close-lightbox"></button>
+    </div>
+  
+  </div>
+
+  <main class="container"> 
+<div class="movie-list-js">
+<ul class="movies-list"></ul>
+</div>
   </main>
 
   <footer>
