--- a/src/library.html
+++ b/src/library.html
@@ -10,18 +10,8 @@
 </head>
 
 <body>
-  <a href="./index.html">Index</a>
-        <button type="button" class="show-modal">Show modal</button>
+  
 
-<!-- modal -->
-<div class="lightbox js-lightbox">
-  <div class="lightbox_overlay">
-    <div class="lightbox_content"></div>
-          <button type="button" class="lightbox_button" data-action="close-lightbox"></button>
-
-  </div>
-
-</div>
 
   <header>
     <div class="conteiner header">
@@ -39,7 +29,20 @@
   </header>
 
   <main class="container">
-  </main>
+    <div class="movie-list-js">
+    <ul class="movies-list"></ul>
+    </div>
+      </main>
+
+
+    <!-- modal -->
+    <div class="lightbox js-lightbox">
+      <div class="lightbox_overlay">
+        <div class="lightbox_content"></div>
+        <button type="button" class="lightbox_button" data-action="close-lightbox"></button>
+      </div>
+    
+    </div>
 
   <footer>
     <div class="conteiner footer">
