Fixed css for main container and header buttons
Исправила css для разметки фильмов на главной странице и кнопки в хедере

--- a/src/library.html
+++ b/src/library.html
@@ -17,7 +17,7 @@
         /></a>
         <p class="header__label">Filmoteka</p>
         <div class="header__button">
-          <button type="button" class="button__wetched">Wetched</button>
+          <button type="button" class="button__watched">Watched</button>
           <button type="button" class="button__queue">Queue</button>
         </div>
 
