Added html and css for pagination

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,24 @@
 
 
   <main class="container main-js">
+    
   </main>
+
+  <!-- Pagination -->
+  
+  <div class="paginate">
+    <ul>
+      <li><a class="pagination-side" href="">&lang;</a></li>
+      <li><a href="">1</a></li>
+      <li><a href="" class="inactive">2</a></li>
+      <li><a href="">3</a></li>
+      <li><a href="" class="active">4</a></li>
+      <li><a href="">5</a></li>
+      <li><a href="" class="more">&hellip;</a></li>
+      <li><a href="">100</a></li>
+      <li><a class="pagination-side" href="">&rang;</a></li>
+    </ul>
+  </div>
 
   <!-- modal -->
   <div class="lightbox js-lightbox">
@@ -38,6 +55,8 @@
     </div>
 
   </div>
+
+  
 
   <footer>
     <div class="conteiner footer">
@@ -57,6 +76,8 @@
     <div class="dash tres"></div>
     <div class="dash cuatro"></div>
   </div>
+
+  
 
 
 </body>
