--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
       <div class="footer__div">
         <p class="footer__p"> Developed with</p>
         <img src="./img/Vector.svg" alt="" class="footer__img">
-        <a href="">by GoIT Students</a>
+       <p>by GoIT Students</p>
       </div>
     </div>
   </footer>
