--- a/src/library.html
+++ b/src/library.html
@@ -36,6 +36,22 @@
 
   <main class="container main-js">
   </main>
+
+  <!-- Pagination -->
+  
+  <div class="paginate">
+    <ul>
+      <li><a class="pagination-side" href="">&lang;</a></li>
+      <li><a href="">1</a></li>
+      <li><a href="" class="inactive">2</a></li>
+      <li><a href="">3</a></li>
+      <li><a href="" class="active">4</a></li>
+      <li><a href="">5</a></li>
+      <li><a href="" class="more">&hellip;</a></li>
+      <li><a href="">100</a></li>
+      <li><a class="pagination-side" href="">&rang;</a></li>
+    </ul>
+  </div>
   
   <!-- modal -->
   <div class="lightbox js-lightbox">
