--- a/src/library.html
+++ b/src/library.html
@@ -68,7 +68,9 @@
       <div class="footer__div">
         <p class="footer__p"> Developed with</p>
         <img src="./img/Vector.svg" alt="" class="footer__img">
-        <a href="" class="footer__link">by GoIT Students</a>
-    </footer>  
+       <p>by GoIT Students</p>
+       </div>
+       </div>
+      </footer>  
   </body>
 </html>
