--- a/src/library.html
+++ b/src/library.html
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-      <div class="conteiner header">
+      <div class="conteiner header-library">
         <a href="./index.html"
           ><img src="./img/film.svg" alt="film tape" class="header__logo"
         /></a>
