Added trailer to modal

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
   <!-- modal -->
   <div class="lightbox js-lightbox">
     <div class="lightbox_overlay">
-      <div class="lightbox_content"></div>
+      <div class="lightbox_content">
+      </div>
       <button type="button" class="lightbox_button" data-action="close-lightbox"></button>
     </div>
 
